Fix valign for git footer icons

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -217,6 +217,7 @@ ul.pagination {
 
   img {
     height: 1em;
+    margin-right: $padding-8;
   }
 }
 
